# MyPlayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/myplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ConcurrentBlockingDeque.h  H.h  JavaCaller.cpp  JavaCaller.h  Log.h  Player.cpp  Player.h  Stream.cpp  Stream.h  StreamAudio.cpp  StreamAudio.h  StreamVideo.cpp  StreamVideo.h  Synchronizer.cpp  Synchronizer.h  native-lib.cpp
app/src/main/cpp/include/libavutil/: common.h
app/src/main/java/com/example/myplayer/: MainActivity.java  Player.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
